# OtusHW

./: Ip_filter.sln
My_ip_filter/: CMakeLists.txt  IpAdress.cpp  IpAdress.h  IpPool.cpp  IpPool.h  My_ip_filter.cpp  My_ip_filter.vcxproj  My_ip_filter.vcxproj.filters  Version.cpp  Version.h  config.h.in
My_ip_filter/x64/Debug/: vc143.idb
My_ip_filter/x64/Debug/My_ip_filter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  My_ip_filter.lastbuildstate
